--- a/client/src/pages/HomePage/homepage.scss
+++ b/client/src/pages/HomePage/homepage.scss
@@ -34,5 +34,8 @@
                 margin-top: 2px;
             }
         }
+        .modal-buttons {
+            display: flex;
+        }
     }
 }
